@@ -442,6 +442,9 @@ main(int argc, char **argv)
 				if (! (opt_crypt_key = crypt_key(optarg)))
 					exit(EXIT_FAILURE);
 				aes_ctx = crypt_init(opt_crypt_key, strlen(opt_crypt_key), TRUE);
+#else
+				msg(_("Compiled without encryption, can not encrypt"));
+				exit(EXIT_FAILURE);
 #endif
 				break;
 			case 'Y':
@@ -453,6 +456,9 @@ main(int argc, char **argv)
 				if (! (opt_decrypt_key = crypt_key(optarg)))
 					exit(EXIT_FAILURE);
 				aes_ctx = crypt_init(opt_decrypt_key, strlen(opt_decrypt_key), FALSE);
+#else
+				msg(_("Compiled without encryption, can not decrypt"));
+				exit(EXIT_FAILURE);
 #endif
 				break;
 			case 'h':
