@@ -1,6 +1,7 @@
 xx May 2009: 1.0.0 Miek <miek@miek.nl>
   - 1.0.0 release! -
   * tests: more DejaGNU tests added
+  * rdup-tr: exit when -X/-Y used and we are compiled with encryption
 
 
 03 May 2009: 0.9.9 Miek <miek@miek.nl>
